--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.5.2",
     "@tsconfig/svelte": "^5.0.0",
+    "@types/three": "^0.158.2",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "tslib": "^2.6.0",
-    "typescript": "^5.0.2",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "adorable-css": "^1.6.0"
+    "adorable-css": "^1.6.0",
+    "three": "^0.158.0"
   }
 }
